--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RGZAltamoda</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,65 +40,46 @@
   </header>
   <section class="intro__section">
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <img class="principal__img" src="./img/casa1.jpg" alt="" />
-          <div class="principal__texto1">
-            <p>Hola! Que lindo que hayas llegado hasta acá. Me presento... Soy Romina Zanetti Gusman. Nací y crecí entre
-              hilos
-              y costuras. Mamá modista y trabajadora de mercería y abuela muy aficionada a remodelar y
-              coser.
-              Siempre me gustó éste mundo pero jamás pensé en dedicarme a él. Pasando por otra carrera
-              antes, hoy soy
-              Diseñadora de Indumentaria y Textil y soy muy felíz!!
-              Te invito a que hagamos algo juntas/os. Algo bello, único y eterno. Y que disfrutemos de
-              este viaje hermoso que
-              es crear algo a medida, para tu ocasión especial.
-            </p>
-          </div>
-        </div>
+      <img class="principal__img" src="./img/casa1.jpg" alt="" />
+      <div class="principal__texto1">
+        <p>Hola! Que lindo que hayas llegado hasta acá. Me presento... Soy Romina Zanetti Gusman. Nací y crecí entre
+          hilos
+          y costuras. Mamá modista y trabajadora de mercería y abuela muy aficionada a remodelar y
+          coser.
+          Siempre me gustó éste mundo pero jamás pensé en dedicarme a él. Pasando por otra carrera
+          antes, hoy soy
+          Diseñadora de Indumentaria y Textil y soy muy felíz!!
+          Te invito a que hagamos algo juntas/os. Algo bello, único y eterno. Y que disfrutemos de
+          este viaje hermoso que
+          es crear algo a medida, para tu ocasión especial.
+        </p>
       </div>
     </div>
   </section>
   <section>
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="texto2">
-            <h2>Vestidos 2021</h2>
-            <p>Te compartimos los vestidos de novias más impresionantes de 2021</p>
-          </div>
-          <div class="video-novias">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/FhICN1mgwI0"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-          </div>
-        </div>
+      <div class="texto2">
+        <h2>Vestidos 2021</h2>
+        <p>Te compartimos los vestidos de novias más impresionantes de 2021</p>
+      </div>
+      <div class="video-novias">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/FhICN1mgwI0" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
     </div>
   </section>
   <footer class="footer">
-    <div class="footer-sm">
-      <div class="container">
-        <div class="row footer-sm__icons">
-          <div class="col">
-            <div class="col">Buscanos en las redes</div>
-            <a href=""><i class="fab fa-facebook-square"></i></a class="nav__link">
-            <a href=""><i class="fab fa-instagram-square"></i></a class="nav__link">
-            <a href=""><i class="fab fa-twitter-square"></i></a class="nav__link">
-
-          </div>
-        </div>
-      </div>
+    <div class="footer-sm__icons">
+      <span>Buscanos en las redes</span>
+      <a href=""><i class="fab fa-facebook-square"></i></a class="nav__link">
+      <a href=""><i class="fab fa-instagram-square"></i></a class="nav__link">
+      <a href=""><i class="fab fa-twitter-square"></i></a class="nav__link">
     </div>
-    <div class="footer-bottom">
-      <div class="container">
-        <div class="row footer-bottom__copyright">
-          <div class="col">
-            &copy;Copyright 2021 <a href="#">RGZAltamoda</a> | Creada por HermannZanetti
-          </div>
-        </div>
+    <div class="row footer-bottom__copyright">
+      <div class="col">
+        &copy;Copyright 2021 <a href="#">RGZAltamoda</a> | Creada por HermannZanetti
       </div>
     </div>
   </footer>
