--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RGZAltamoda</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -61,26 +61,15 @@
     </form>
   </section>
   <footer class="footer">
-    <div class="footer-sm">
-      <div class="container">
-        <div class="row footer-sm__icons">
-          <div class="col">
-            <div class="col">Buscanos en las redes</div>
-            <a href=""><i class="fab fa-facebook-square"></i></a class="nav__link">
-            <a href=""><i class="fab fa-instagram-square"></i></a class="nav__link">
-            <a href=""><i class="fab fa-twitter-square"></i></a class="nav__link">
-
-          </div>
-        </div>
-      </div>
+    <div class="footer-sm__icons">
+      <span>Buscanos en las redes</span>
+      <a href=""><i class="fab fa-facebook-square"></i></a class="nav__link">
+      <a href=""><i class="fab fa-instagram-square"></i></a class="nav__link">
+      <a href=""><i class="fab fa-twitter-square"></i></a class="nav__link">
     </div>
-    <div class="footer-bottom">
-      <div class="container">
-        <div class="row footer-bottom__copyright">
-          <div class="col">
-            &copy;Copyright 2021 <a href="#">RGZAltamoda</a> | Creada por HermannZanetti
-          </div>
-        </div>
+    <div class="row footer-bottom__copyright">
+      <div class="col">
+        &copy;Copyright 2021 <a href="#">RGZAltamoda</a> | Creada por HermannZanetti
       </div>
     </div>
   </footer>
